[package]
name = "secret_sharing"
version = "0.1.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Various secret sharing schemes"
repository = "https://github.com/lovesh/secret-sharing-schemes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
failure = "0.1.5"
serde = "1.0"
serde_derive = "1.0"

[dependencies.amcl_wrapper]
version = "0.1.7"
default-features = false
features = ["bls381"]